--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /public/storage
 /storage/*.key
 /vendor
+/views/test
 /.idea
 /.vagrant
 Homestead.json
@@ -10,3 +11,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+*.DS_Store
+_ide_helper.php
+/mix-manifest.json
+ubuntu-xenial-16.04-cloudimg-console.log
